fixed css files

--- a/CS6011/Week1/Day4/MyHttpServer/src/resources/index.html
+++ b/CS6011/Week1/Day4/MyHttpServer/src/resources/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title> CS6011 Lab 1 </title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
 <h1>Powerpuff Girls Fan Site </h1>
