--- a/CS6011/Week4/Day17/ThreadedWebServer/src/resources/index.html
+++ b/CS6011/Week4/Day17/ThreadedWebServer/src/resources/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <title> CS6011 Lab 1 </title>
-  <link rel="stylesheet" href="app.css">
+  <meta charset="UTF-8">
+  <title>Chat app</title>
+  <script type="text/javascript" src="app.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-<h1>Powerpuff Girls Fan Site </h1>
-<h2>Producer: Hanna Barbara</h2>
-<h3>Aired on: Cartoon Network </h3>
-<h4>Era: 1990's </h4>
-<h5>Audience: 5+ </h5>
-<h6>Rating: 4.5 </h6>
 
-<p><span> Powerpuff girls recipe </span> </p>
-<br>
-<hr>
-<div>
-  <ul>
-    <li>Sugar</li>
-    <li>Spice</li>
-    <li><b>Everything nice</b></li>
-  </ul>
+<div id="joinForm">
+  <label>User name: <input id="userName" type="text"></label>
+  <label>Chat room: <input id="chatRoom" type="text"></label>
+  <button id="joinButton">Join</button>
 </div>
-<div>
-  <em> Blossom </em> (voiced by Cathy Cavadini) is one of the main characters in the animated.television series "Powerpuff Girls."
 
-  She has long, light red-orange hair, pink eyes, and usually wears a pink dress with a black belt and a red bow on the top of her head and a heart-shaped hairclip when seen from behind. She is known for being the smartest one and the leader of the Powerpuff Girls.
+<div id="messageForm">
+  <div id="messageDisplay">
+
+  </div>
+
+  <div>
+    <textarea id="messageInput"></textarea>
+    <button id="sendButton">Send</button>
+    <button id="leaveButton">Leave</button>
+
+  </div>
 </div>
+
 </body>
 </html>
