completed chat server and 2 extras

--- a/CS6011/Week4/Day17/ThreadedWebServer/src/resources/index.html
+++ b/CS6011/Week4/Day17/ThreadedWebServer/src/resources/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+<div>
+    <p>Chat rooms:</p>
+    <button id="getRooms">Get Rooms</button>
+    <ul id = "roomsList">
+
+    </ul>
+</div>
+
 <div id="joinForm">
   <label>User name: <input id="userName" type="text"></label>
   <label>Chat room: <input id="chatRoom" type="text"></label>
